# mtx2img

./: .gitignore  CMakeLists.txt  Config.cmake.in  build.bat  build.sh  makefile  readme.md
.github/: .gitignore
.github/assets/: .gitignore  fidap005.mtx
.github/workflows/: .gitignore  ci.yml  packager.yml  testrunner.yml
include/mtx2img/: mtx2img.hpp
src/: main.cpp  mtx2img.cpp
